src/test/deca/syntax/invalid/quote.deca
// Description:
//    Ajout de quote en trop
//
// Resultats:
//    Erreur du lexer ligne 11, à la 3e quote
//
// Historique:
//    Cree le 09/01/2024

{
    println(""");
}
